- added missing bit of SQL to features.sql
- Added ZenMagick settings to zm_env() output
- make 'default_layout' the default default layout for all themes
- support for optional local.php file that may override default settings
- added support to use ZenMagick from within external PHP web applications
- feature admin was missing in release file :/
- website:
  * feature documentation

Initial Release:
- Fix state selection in create_account
- Find/fix invalid '&lt;? ' PHP open tags
- fieldset in create_account
- Fix missing state field in create_account
- split common.js and category.js
- add popupWindow to common.js
- Sort features by id
- Fix manufactureres code (use join as some manufacturers do not have entries
  in TABLE_MANUFACTURERS_INFO)
- changed features table layout; feature description is now limited and
  feature value of type 'text' to allow for longer values
- Switch ZM_DB_PREFIX to 'zm_', enable features
- Add zm_get_zen_includes() method to reliably get the zen-cart/inlcudes
  directory
- Fix error when $messageStack->messages does not exist
- Added ZMFeatures::getFeatureList(), getFeatureTypes() amd
  getFeatureTypeForId()
- Restructured ZMFeatures
- add auto_increment to zm_features primary key
- New zen-cart admin extension to manage Features
- zen-cart admin utility to browse the catalog using dtee
- Fix ZMRequest:getCategoryPathArray() to always return an array
- Added ZMEZPages and model/ZMEZPage
- Add ezpages.php box to default theme
- Added ez-page page view (incl. controller)
- Added sitemap
- Make redirect views work in store.php; this is still very ugly, though
- Add Unsubscribe controller to redirect to accoun_newsletter page
- Added views for conditions, privacy and shippinginfo
- Won't setup GV FAQ, as it's easier to set up as EZ TOC pages...
- Add coupon stuff
- Added contact us view/controller
- Add i18n support per theme; requires to remove zen_date_raw definition in
  zen-cart/includes/languages/english.php